--- a/data/components/RegistrationForm.yaml
+++ b/data/components/RegistrationForm.yaml
@@ -10,11 +10,11 @@ parameters:
       source: default
       required: true
       allowedContentTypes:
-        RegistrationForm:
-          id: RegistrationForm
+        registrationForm:
+          id: registrationForm
           name: RegistrationForm
 useTeamPermissions: true
 slots: []
 canBeComposition: false
-created: '2022-12-28T17:04:00.380866+00:00'
-updated: '2023-01-10T12:49:38.937327+00:00'
+created: '2023-01-10T16:49:48.010492+00:00'
+updated: '2023-01-10T17:13:54.636654+00:00'
