--- a/data/components/Talk.yaml
+++ b/data/components/Talk.yaml
@@ -10,11 +10,11 @@ parameters:
       source: default
       required: true
       allowedContentTypes:
-        Talk:
-          id: Talk
+        talk:
+          id: talk
           name: Talk
 useTeamPermissions: true
 slots: []
 canBeComposition: false
-created: '2022-12-28T17:04:01.236991+00:00'
-updated: '2023-01-10T12:49:39.192936+00:00'
+created: '2023-01-10T16:49:47.38865+00:00'
+updated: '2023-01-10T17:13:17.367184+00:00'
