--- a/data/components/TalkList.yaml
+++ b/data/components/TalkList.yaml
@@ -10,8 +10,8 @@ parameters:
       source: default
       required: true
       allowedContentTypes:
-        TalkList:
-          id: TalkList
+        talkList:
+          id: talkList
           name: Talk List
 useTeamPermissions: true
 slots:
@@ -23,5 +23,5 @@ slots:
       - $loop
     inheritAllowedComponents: false
 canBeComposition: false
-created: '2022-12-28T17:04:01.275248+00:00'
-updated: '2023-01-10T12:49:39.434988+00:00'
+created: '2023-01-10T16:49:48.217711+00:00'
+updated: '2023-01-10T17:12:54.566889+00:00'
