--- a/data/components/WhyAttend.yaml
+++ b/data/components/WhyAttend.yaml
@@ -11,13 +11,13 @@ parameters:
       required: true
       allowedContentTypes:
         whyAttend:
-          id: WhyAttend
+          id: whyAttend
           name: Why Attend
 useTeamPermissions: true
 slots: []
 canBeComposition: false
-created: '2022-12-28T17:04:01.203181+00:00'
-updated: '2023-01-10T12:49:39.668137+00:00'
+created: '2023-01-10T16:49:47.194725+00:00'
+updated: '2023-01-10T17:16:58.919049+00:00'
 variants:
   - id: whyattendleft
     name: Why Attend Left
