--- a/data/components/Page.yaml
+++ b/data/components/Page.yaml
@@ -21,6 +21,7 @@ slots:
       - HeroContentful
       - HeroKontent
       - HeroContentstack
+      - heroSanity
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -30,12 +31,10 @@ slots:
 defaults:
   type: Page
   slots:
-    footer:
+    Footer:
       - type: Footer
-        parameters: {}
-    header:
+    Header:
       - type: Header
-        parameters: {}
 slugSettings:
   unique: global
   required: 'yes'
@@ -43,4 +42,4 @@ slugSettings:
   regularExpressionMessage: No forward slash in beginning of Slug
 canBeComposition: true
 created: '2023-01-10T16:49:48.126868+00:00'
-updated: '2023-01-10T16:49:48.126868+00:00'
+updated: '2023-01-12T17:15:19.899594+00:00'
