Added Sanity support.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,9 @@ CONTENTSTACK_API_KEY=''
 CONTENTSTACK_DELIVERY_TOKEN=''
 CONTENTSTACK_ENVIRONMENT=''
 CONTENTSTACK_REGION=''
+
+SANITY_PROJECT_ID=''
+SANITY_CDN_PROJECT_ID=''
+SANITY_DATASET=''
+SANITY_USE_CDN=''
+SANITY_API_VERSION=''
