--- a/data/components/Page.yaml
+++ b/data/components/Page.yaml
@@ -21,6 +21,8 @@ slots:
       - HeroContentful
       - HeroKontent
       - HeroContentstack
+      - HeroSanity
+      - $localization
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -41,4 +43,4 @@ slugSettings:
   regularExpressionMessage: No forward slash in beginning of Slug
 canBeComposition: true
 created: '2023-01-10T16:49:48.126868+00:00'
-updated: '2023-01-12T17:15:19.899594+00:00'
+updated: '2023-01-12T17:30:24.694571+00:00'
