--- a/data/components/Page.yaml
+++ b/data/components/Page.yaml
@@ -15,6 +15,7 @@ slots:
       - $test
       - $personalization
       - $loop
+      - $localization
       - RegistrationForm
       - TalkList
       - WhyAttend
@@ -22,7 +23,7 @@ slots:
       - HeroKontent
       - HeroContentstack
       - HeroSanity
-      - $localization
+      - HeroHygraph
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -43,4 +44,4 @@ slugSettings:
   regularExpressionMessage: No forward slash in beginning of Slug
 canBeComposition: true
 created: '2023-01-10T16:49:48.126868+00:00'
-updated: '2023-01-12T17:30:24.694571+00:00'
+updated: '2023-01-13T09:52:34.215304+00:00'
