--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@uniformdev/canvas-algolia": "^17.7.0",
     "@uniformdev/canvas-contentful": "^17.7.0",
     "@uniformdev/canvas-contentstack": "^17.7.0",
+    "@uniformdev/canvas-graphcms": "^17.1.0",
     "@uniformdev/canvas-kontent": "^17.7.0",
     "@uniformdev/canvas-next": "^17.7.0",
     "@uniformdev/canvas-react": "^17.7.0",
@@ -78,6 +79,7 @@
     "contentful": "^9.2.14",
     "contentstack": "^3.15.5",
     "cookie": "0.5.0",
+    "graphql-request": "^5.1.0",
     "next": "13.0.6",
     "nookies": "2.5.2",
     "react": "18.2.0",
