--- a/data/components/Page.yaml
+++ b/data/components/Page.yaml
@@ -24,6 +24,7 @@ slots:
       - HeroContentstack
       - HeroSanity
       - HeroHygraph
+      - HeroStrapi
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -44,4 +45,4 @@ slugSettings:
   regularExpressionMessage: No forward slash in beginning of Slug
 canBeComposition: true
 created: '2023-01-10T16:49:48.126868+00:00'
-updated: '2023-01-13T09:52:34.215304+00:00'
+updated: '2023-01-13T17:13:41.796076+00:00'
