Updated .env.example file with Strapi keys.

--- a/.env.example
+++ b/.env.example
@@ -9,19 +9,22 @@ CONTENTFUL_ENVIRONMENT=''
 CONTENTFUL_CPA_ACCESS_TOKEN=''
 CONTENTFUL_CDA_ACCESS_TOKEN=''
 
-KONTENT_PROJECT_ID=''
-KONTENT_DELIVERY_API_KEY=''
+#KONTENT_PROJECT_ID=''
+#KONTENT_DELIVERY_API_KEY=''
 
-CONTENTSTACK_API_KEY=''
-CONTENTSTACK_DELIVERY_TOKEN=''
-CONTENTSTACK_ENVIRONMENT=''
-CONTENTSTACK_REGION=''
+#CONTENTSTACK_API_KEY=''
+#CONTENTSTACK_DELIVERY_TOKEN=''
+#CONTENTSTACK_ENVIRONMENT=''
+#CONTENTSTACK_REGION=''
 
-SANITY_PROJECT_ID=''
-SANITY_CDN_PROJECT_ID=''
-SANITY_DATASET=''
-SANITY_USE_CDN=''
-SANITY_API_VERSION=''
+#SANITY_PROJECT_ID=''
+#SANITY_CDN_PROJECT_ID=''
+#SANITY_DATASET=''
+#SANITY_USE_CDN=''
+#SANITY_API_VERSION=''
 
-HYGRAPH_URL=''
-HYGRAPH_TOKEN=''
+#HYGRAPH_URL=''
+#HYGRAPH_TOKEN=''
+
+#STRAPI_API_HOST=''
+#STRAPI_API_TOKEN=''
