--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ UNIFORM_PROJECT_ID=''
 UNIFORM_API_KEY=''
 UNIFORM_CLI_BASE_URL='https://uniform.app'
 UNIFORM_PREVIEW_SECRET=''
-UNIFORM_PROJECT_MAP_ID=''
+UNIFORM_PROJECT_MAP_ID='62627c49-c1eb-41ed-8b86-dbcfa155f08e'
 
 CONTENTFUL_SPACE_ID=''
 CONTENTFUL_ENVIRONMENT=''
