--- a/data/components/dynamicTalkPage.yaml
+++ b/data/components/dynamicTalkPage.yaml
@@ -13,6 +13,7 @@ slots:
     name: Content
     allowedComponents:
       - DynamicTalk
+      - HeroContentful
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -30,4 +31,4 @@ defaults:
       - type: DynamicTalk
 canBeComposition: true
 created: '2023-01-30T22:39:24.604731+00:00'
-updated: '2023-01-31T13:00:53.747567+00:00'
+updated: '2023-01-31T19:13:05.977854+00:00'
