--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "contentful": "^9.3.0",
     "contentstack": "^3.15.6",
     "cookie": "0.5.0",
+    "follow-redirects": "^1.15.2",
     "graphql-request": "^5.1.0",
     "next": "13.1.5",
     "nookies": "2.5.2",
