--- a/data/components/Page.yaml
+++ b/data/components/Page.yaml
@@ -14,7 +14,6 @@ slots:
     allowedComponents:
       - $test
       - $personalization
-      - $loop
       - $localization
       - RegistrationForm
       - TalkList
@@ -25,6 +24,7 @@ slots:
       - HeroSanity
       - HeroHygraph
       - HeroStrapi
+      - SelectTalkList
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -45,4 +45,4 @@ slugSettings:
   regularExpressionMessage: No forward slash in beginning of Slug
 canBeComposition: true
 created: '2023-01-10T16:49:48.126868+00:00'
-updated: '2023-01-30T19:27:27.062472+00:00'
+updated: '2023-02-02T20:36:42.215048+00:00'
