--- a/data/components/Talks.yaml
+++ b/data/components/Talks.yaml
@@ -1,4 +1,4 @@
-id: talks
+id: Talks
 name: Talks
 icon: layout-list
 parameters: []
@@ -13,6 +13,7 @@ slots:
     name: Content
     allowedComponents:
       - DynamicTalkList
+      - SelectTalkList
     inheritAllowedComponents: false
   - id: Footer
     name: Footer
@@ -44,4 +45,4 @@ slugSettings:
   regularExpressionMessage: No forward slash in beginning of Slug
 canBeComposition: true
 created: '2023-01-30T19:38:05.81616+00:00'
-updated: '2023-01-30T19:38:40.208672+00:00'
+updated: '2023-02-02T20:37:54.28409+00:00'
