--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uniformdev/uniform-canvas-vnext-nextjs-playground",
-  "version": "18.8.0",
+  "version": "18.8.1-alpha.1",
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
@@ -58,22 +58,22 @@
     "@react-hook/window-scroll": "1.3.0",
     "@sanity/client": "^4.0.1",
     "@sanity/image-url": "^1.0.2",
-    "@uniformdev/canvas": "^18.8.0",
+    "@uniformdev/canvas": "18.8.1-alpha.1",
     "@uniformdev/canvas-algolia": "^17.8.0",
-    "@uniformdev/canvas-contentful": "^18.8.0",
-    "@uniformdev/canvas-contentstack": "^18.8.0",
+    "@uniformdev/canvas-contentful": "18.8.1-alpha.1",
+    "@uniformdev/canvas-contentstack": "18.8.1-alpha.1",
     "@uniformdev/canvas-graphcms": "^17.1.0",
-    "@uniformdev/canvas-kontent": "^18.8.0",
-    "@uniformdev/canvas-next": "^18.8.0",
-    "@uniformdev/canvas-react": "^18.8.0",
-    "@uniformdev/canvas-sanity": "^18.8.0",
+    "@uniformdev/canvas-kontent": "18.8.1-alpha.1",
+    "@uniformdev/canvas-next": "18.8.1-alpha.1",
+    "@uniformdev/canvas-react": "18.8.1-alpha.1",
+    "@uniformdev/canvas-sanity": "18.8.1-alpha.1",
     "@uniformdev/canvas-strapi": "^17.1.0",
-    "@uniformdev/context": "^18.8.0",
-    "@uniformdev/context-devtools": "^18.8.0",
-    "@uniformdev/context-gtag": "^18.8.0",
-    "@uniformdev/context-next": "^18.8.0",
-    "@uniformdev/context-react": "^18.8.0",
-    "@uniformdev/project-map": "^18.8.0",
+    "@uniformdev/context": "18.8.1-alpha.1",
+    "@uniformdev/context-devtools": "18.8.1-alpha.1",
+    "@uniformdev/context-gtag": "18.8.1-alpha.1",
+    "@uniformdev/context-next": "18.8.1-alpha.1",
+    "@uniformdev/context-react": "18.8.1-alpha.1",
+    "@uniformdev/project-map": "18.8.1-alpha.1",
     "algoliasearch": "^4.14.3",
     "analytics": "0.8.1",
     "contentful": "^9.3.2",
