Updated project to platform v18.9.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uniformdev/uniform-canvas-vnext-nextjs-playground",
-  "version": "18.8.1-alpha.1",
+  "version": "18.9.0",
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
@@ -58,22 +58,22 @@
     "@react-hook/window-scroll": "1.3.0",
     "@sanity/client": "^4.0.1",
     "@sanity/image-url": "^1.0.2",
-    "@uniformdev/canvas": "18.8.1-alpha.1",
+    "@uniformdev/canvas": "18.9.0",
     "@uniformdev/canvas-algolia": "^17.8.0",
-    "@uniformdev/canvas-contentful": "18.8.1-alpha.1",
-    "@uniformdev/canvas-contentstack": "18.8.1-alpha.1",
+    "@uniformdev/canvas-contentful": "18.9.0",
+    "@uniformdev/canvas-contentstack": "18.9.0",
     "@uniformdev/canvas-graphcms": "^17.1.0",
-    "@uniformdev/canvas-kontent": "18.8.1-alpha.1",
-    "@uniformdev/canvas-next": "18.8.1-alpha.1",
-    "@uniformdev/canvas-react": "18.8.1-alpha.1",
-    "@uniformdev/canvas-sanity": "18.8.1-alpha.1",
+    "@uniformdev/canvas-kontent": "18.9.0",
+    "@uniformdev/canvas-next": "18.9.0",
+    "@uniformdev/canvas-react": "18.9.0",
+    "@uniformdev/canvas-sanity": "18.9.0",
     "@uniformdev/canvas-strapi": "^17.1.0",
-    "@uniformdev/context": "18.8.1-alpha.1",
-    "@uniformdev/context-devtools": "18.8.1-alpha.1",
-    "@uniformdev/context-gtag": "18.8.1-alpha.1",
-    "@uniformdev/context-next": "18.8.1-alpha.1",
-    "@uniformdev/context-react": "18.8.1-alpha.1",
-    "@uniformdev/project-map": "18.8.1-alpha.1",
+    "@uniformdev/context": "18.9.0",
+    "@uniformdev/context-devtools": "18.9.0",
+    "@uniformdev/context-gtag": "18.9.0",
+    "@uniformdev/context-next": "18.9.0",
+    "@uniformdev/context-react": "18.9.0",
+    "@uniformdev/project-map": "18.9.0",
     "algoliasearch": "^4.14.3",
     "analytics": "0.8.1",
     "contentful": "^9.3.2",
@@ -96,21 +96,21 @@
     "@next/bundle-analyzer": "13.1.6",
     "@types/cookie": "0.5.1",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "@types/styled-components": "5.1.26",
-    "@uniformdev/cli": "^18.7.0",
+    "@uniformdev/cli": "^18.9.0",
     "autoprefixer": "10.4.13",
     "dotenv": "16.0.3",
-    "netlify-cli": "12.10.0",
+    "netlify-cli": "12.12.0",
     "node-fetch": "2.6.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.21",
     "prettier": "^2.8.4",
-    "sass": "1.58.0",
+    "sass": "1.58.1",
     "tailwindcss": "3.2.6",
     "ts-loader": "9.4.2",
-    "tsup": "6.6.0",
+    "tsup": "6.6.3",
     "typescript": "4.9.5"
   }
 }
