--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env
-
 # vercel
 .vercel
 
@@ -44,3 +41,5 @@ lib/context/manifest.json
 
 # env
 .env
+.env*
+.env.*
