Refactored the project to use the src folder.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@uniformdev/uniform-canvas-vnext-nextjs-playground",
+	"name": "se-uniform-conf",
 	"version": "18.29.0",
 	"private": true,
 	"license": "Apache-2.0",
@@ -10,8 +10,7 @@
 		"build": "run-s context:manifest build:next",
 		"build:app": "run-s context:manifest build:next",
 		"build:next": "next build",
-		"context:manifest": "uniform context manifest download --output ./lib/context/manifest.json",
-		"deploy:experiment": "cp .env.example .env && WITH_NETLIFY_BUILD_FLAG=true tsx ../../scripts/deploy-to-netlify.ts",
+		"context:manifest": "uniform context manifest download --output ./src/lib/context/manifest.json",
 		"pull": "run-s pull:canvas pull:project-map pull:context",
 		"pull:canvas": "run-s pull:components pull:compositions",
 		"pull:project-map": "run-s pull:project-map-definition pull:project-map-nodes",
@@ -56,33 +55,30 @@
 		"@analytics/google-analytics": "1.0.5",
 		"@kentico/kontent-delivery": "^11.13.0",
 		"@react-hook/window-scroll": "1.3.0",
-		"@sanity/client": "5.4.0",
+		"@sanity/client": "5.4.2",
 		"@sanity/image-url": "^1.0.2",
-		"@uniformdev/canvas": "18.29.0",
+		"@uniformdev/canvas": "18.31.0",
 		"@uniformdev/canvas-algolia": "^17.8.0",
-		"@uniformdev/canvas-contentful": "18.29.0",
-		"@uniformdev/canvas-contentstack": "18.29.0",
+		"@uniformdev/canvas-contentful": "18.31.0",
+		"@uniformdev/canvas-contentstack": "18.31.0",
 		"@uniformdev/canvas-graphcms": "^17.1.0",
-		"@uniformdev/canvas-kontent": "18.29.0",
-		"@uniformdev/canvas-next": "18.29.0",
-		"@uniformdev/canvas-react": "18.29.0",
-		"@uniformdev/canvas-sanity": "18.29.0",
+		"@uniformdev/canvas-kontent": "18.31.0",
+		"@uniformdev/canvas-next": "18.31.0",
+		"@uniformdev/canvas-react": "18.31.0",
+		"@uniformdev/canvas-sanity": "18.31.0",
 		"@uniformdev/canvas-strapi": "^17.1.0",
-		"@uniformdev/context": "18.29.0",
-		"@uniformdev/context-devtools": "18.29.0",
-		"@uniformdev/context-gtag": "18.29.0",
-		"@uniformdev/context-next": "18.29.0",
-		"@uniformdev/context-react": "18.29.0",
-		"@uniformdev/project-map": "18.29.0",
-		"algoliasearch": "^4.16.0",
+		"@uniformdev/context": "18.31.0",
+		"@uniformdev/context-devtools": "18.31.0",
+		"@uniformdev/context-gtag": "18.31.0",
+		"@uniformdev/context-next": "18.31.0",
+		"@uniformdev/context-react": "18.31.0",
+		"@uniformdev/project-map": "18.31.0",
 		"analytics": "0.8.1",
 		"contentful": "^9.3.5",
-		"contentstack": "^3.16.1",
+		"contentstack": "^3.17.0",
 		"cookie": "0.5.0",
-		"follow-redirects": "^1.15.2",
 		"graphql-request": "^5.2.0",
 		"next": "13.2.4",
-		"nookies": "2.5.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"strapi-sdk-js": "^2.2.0",
@@ -90,27 +86,19 @@
 	},
 	"devDependencies": {
 		"@contentful/rich-text-html-renderer": "^16.0.3",
-		"@emotion/react": "11.10.6",
-		"@netlify/functions": "1.4.0",
-		"@netlify/plugin-nextjs": "4.33.0",
-		"@next/bundle-analyzer": "13.2.4",
 		"@types/cookie": "0.5.1",
 		"@types/node": "18.15.11",
-		"@types/react": "18.0.31",
+		"@types/react": "18.0.33",
 		"@types/react-dom": "18.0.11",
 		"@types/styled-components": "5.1.26",
-		"@uniformdev/cli": "^18.29.0",
-		"autoprefixer": "10.4.14",
-		"dotenv": "16.0.3",
-		"netlify-cli": "13.2.2",
-		"node-fetch": "2.6.1",
+		"@uniformdev/cli": "^18.31.0",
+		"autoprefixer": "^10.4.14",
 		"npm-run-all": "4.1.5",
-		"postcss": "8.4.21",
+		"postcss": "^8.4.21",
 		"prettier": "^2.8.7",
 		"sass": "1.60.0",
-		"tailwindcss": "3.3.0",
+		"tailwindcss": "3.3.1",
 		"ts-loader": "9.4.2",
-		"tsup": "6.7.0",
-		"typescript": "5.0.2"
+		"typescript": "5.0.3"
 	}
 }
