--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "se-uniform-conf",
-	"version": "19.3.0",
+	"version": "19.6.0",
 	"private": true,
 	"license": "Apache-2.0",
 	"scripts": {
@@ -55,29 +55,29 @@
 	},
 	"dependencies": {
 		"@react-hook/window-scroll": "1.3.0",
-		"@uniformdev/canvas": "19.3.0",
-		"@uniformdev/canvas-contentful": "19.3.0",
-		"@uniformdev/canvas-next": "19.3.0",
-		"@uniformdev/canvas-react": "19.3.0",
-		"@uniformdev/context": "19.3.0",
-		"@uniformdev/context-devtools": "19.3.0",
-		"@uniformdev/context-next": "19.3.0",
-		"@uniformdev/context-react": "19.3.0",
-		"@uniformdev/project-map": "19.3.0",
+		"@uniformdev/canvas": "19.6.0",
+		"@uniformdev/canvas-contentful": "19.6.0",
+		"@uniformdev/canvas-next": "19.6.0",
+		"@uniformdev/canvas-react": "19.6.0",
+		"@uniformdev/context": "19.6.0",
+		"@uniformdev/context-devtools": "19.6.0",
+		"@uniformdev/context-next": "19.6.0",
+		"@uniformdev/context-react": "19.6.0",
+		"@uniformdev/project-map": "19.6.0",
 		"cookie": "0.5.0",
 		"graphql-request": "^6.0.0",
-		"next": "13.3.4",
+		"next": "13.4.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"styled-components": "5.3.10"
+		"styled-components": "6.0.0-rc.1"
 	},
 	"devDependencies": {
 		"@types/cookie": "0.5.1",
-		"@types/node": "18.16.3",
-		"@types/react": "18.2.0",
-		"@types/react-dom": "18.2.1",
+		"@types/node": "20.1.1",
+		"@types/react": "18.2.6",
+		"@types/react-dom": "18.2.4",
 		"@types/styled-components": "5.1.26",
-		"@uniformdev/cli": "^19.3.0",
+		"@uniformdev/cli": "^19.6.0",
 		"autoprefixer": "^10.4.14",
 		"npm-run-all": "4.1.5",
 		"postcss": "^8.4.23",
