--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "se-uniform-conf",
+	"name": "se-uniform-conf-ngm",
 	"version": "19.10.0",
 	"private": true,
 	"license": "Apache-2.0",
