--- a/data/uniform/components/footer.yaml
+++ b/data/uniform/components/footer.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=<https://canary.uniform.app/schemas/json-schema/component-definition/v1.json>
+$schema: https://canary.uniform.app/schemas/json-schema/component-definition/v1.json
 id: footer
 name: Footer
 icon: border-bottom
@@ -5,5 +7,5 @@ parameters: []
 useTeamPermissions: true
 slots: []
 canBeComposition: false
-created: '2023-05-03T12:44:47.444105+00:00'
-updated: '2023-05-03T12:44:47.444105+00:00'
+created: '2023-05-23T13:04:40.853567+00:00'
+updated: '2023-05-23T13:04:40.853567+00:00'
