--- a/data/uniform/components/header.yaml
+++ b/data/uniform/components/header.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=<https://canary.uniform.app/schemas/json-schema/component-definition/v1.json>
+$schema: https://canary.uniform.app/schemas/json-schema/component-definition/v1.json
 id: header
 name: Header
 icon: border-top
@@ -5,5 +7,5 @@ parameters: []
 useTeamPermissions: true
 slots: []
 canBeComposition: false
-created: '2023-05-03T12:44:28.254235+00:00'
-updated: '2023-05-03T12:44:28.254235+00:00'
+created: '2023-05-23T13:04:41.193911+00:00'
+updated: '2023-05-23T13:04:41.193911+00:00'
