--- a/data/uniform/components/hero.yaml
+++ b/data/uniform/components/hero.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=<https://canary.uniform.app/schemas/json-schema/component-definition/v1.json>
+$schema: https://canary.uniform.app/schemas/json-schema/component-definition/v1.json
 id: hero
 name: Hero
 icon: format-heading
@@ -41,5 +43,5 @@ useTeamPermissions: true
 slots: []
 titleParameter: title
 canBeComposition: false
-created: '2023-05-03T12:39:48.871403+00:00'
-updated: '2023-05-03T21:13:22.713794+00:00'
+created: '2023-05-23T13:04:41.482215+00:00'
+updated: '2023-05-23T13:04:41.482215+00:00'
