--- a/data/uniform/components/page.yaml
+++ b/data/uniform/components/page.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=<https://canary.uniform.app/schemas/json-schema/component-definition/v1.json>
+$schema: https://canary.uniform.app/schemas/json-schema/component-definition/v1.json
 id: page
 name: Page
 icon: file-document
@@ -24,6 +26,7 @@ slots:
       - talkList
       - $personalization
       - registrationForm
+      - talkBlock
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -43,5 +46,5 @@ defaults:
       - type: header
 titleParameter: pageTitle
 canBeComposition: true
-created: '2023-05-03T12:34:57.774812+00:00'
-updated: '2023-05-03T21:03:59.840415+00:00'
+created: '2023-05-23T13:04:41.787163+00:00'
+updated: '2023-05-23T13:22:33.503763+00:00'
