--- a/data/uniform/components/talkBlock.yaml
+++ b/data/uniform/components/talkBlock.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=<https://canary.uniform.app/schemas/json-schema/component-definition/v1.json>
 $schema: https://canary.uniform.app/schemas/json-schema/component-definition/v1.json
-id: talk
-name: Talk
-icon: mic
+id: talkBlock
+name: Talk Block
+icon: image-text
 parameters:
   - id: title
     name: Title
@@ -19,14 +19,9 @@ parameters:
     type: text
     helpText: ''
     typeConfig: null
-  - id: slug
-    name: Slug
-    type: text
-    helpText: ''
-    typeConfig: null
 useTeamPermissions: true
 slots: []
 titleParameter: title
 canBeComposition: false
-created: '2023-05-23T13:04:42.448463+00:00'
-updated: '2023-05-25T10:40:47.17392+00:00'
+created: '2023-05-23T13:22:27.484181+00:00'
+updated: '2023-05-23T13:22:27.484181+00:00'
