--- a/data/uniform/components/whyAttend.yaml
+++ b/data/uniform/components/whyAttend.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=<https://canary.uniform.app/schemas/json-schema/component-definition/v1.json>
+$schema: https://canary.uniform.app/schemas/json-schema/component-definition/v1.json
 id: whyAttend
 name: Why Attend
 icon: bulb
@@ -12,6 +14,7 @@ parameters:
     type: text
     helpText: ''
     typeConfig:
+      required: false
       multiline: true
       linesCount: '5'
   - id: image
@@ -23,8 +26,8 @@ useTeamPermissions: true
 slots: []
 titleParameter: title
 canBeComposition: false
-created: '2023-05-03T14:33:41.696302+00:00'
-updated: '2023-05-03T21:14:03.242834+00:00'
+created: '2023-05-23T13:04:43.044742+00:00'
+updated: '2023-05-23T13:04:43.044742+00:00'
 variants:
   - id: left
     name: Left
