--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "se-uniform-conf-ngm",
-	"version": "19.17.0",
+	"version": "19.22.0",
 	"private": true,
 	"license": "Apache-2.0",
 	"scripts": {
@@ -55,34 +55,29 @@
 	},
 	"dependencies": {
 		"@react-hook/window-scroll": "1.3.0",
-		"@uniformdev/canvas": "19.17.0",
-		"@uniformdev/canvas-contentful": "19.17.0",
-		"@uniformdev/canvas-next": "19.17.0",
-		"@uniformdev/canvas-react": "19.17.0",
-		"@uniformdev/context": "19.17.0",
-		"@uniformdev/context-devtools": "19.17.0",
-		"@uniformdev/context-next": "19.17.0",
-		"@uniformdev/context-react": "19.17.0",
-		"@uniformdev/project-map": "19.17.0",
+		"@uniformdev/canvas": "19.22.0",
+		"@uniformdev/canvas-next": "19.22.0",
+		"@uniformdev/canvas-react": "19.22.0",
+		"@uniformdev/context": "19.22.0",
+		"@uniformdev/context-devtools": "19.22.0",
+		"@uniformdev/context-next": "19.22.0",
+		"@uniformdev/context-react": "19.22.0",
+		"@uniformdev/project-map": "19.22.0",
 		"cookie": "0.5.0",
-		"graphql-request": "^6.1.0",
-		"next": "13.4.4",
+		"next": "13.4.5",
 		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"styled-components": "6.0.0-rc.3"
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/cookie": "0.5.1",
-		"@types/node": "20.2.5",
-		"@types/react": "18.2.8",
-		"@types/react-dom": "18.2.4",
-		"@types/styled-components": "5.1.26",
-		"@uniformdev/cli": "^19.17.0",
+		"@types/node": "20.3.1",
+		"@types/react": "18.2.12",
+		"@uniformdev/cli": "^19.22.0",
 		"autoprefixer": "^10.4.14",
 		"npm-run-all": "4.1.5",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
-		"sass": "1.62.1",
+		"sass": "1.63.4",
 		"tailwindcss": "3.3.2",
 		"ts-loader": "9.4.3",
 		"typescript": "5.1.3"
