Added edge personaliation package for Vercel.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"push:context:aggregates": "uniform context aggregate push ./data/uniform/context/aggregates",
 		"push:context:quirks": "uniform context quirk push ./data/uniform/context/quirks",
 		"push:context:tests": "uniform context test push ./data/uniform/context/tests",
-		"push:context:publish-manifest": "uniform context manifest publish",		
+		"push:context:publish-manifest": "uniform context manifest publish",
 		"package": "run-s package:canvas package:context",
 		"package:canvas": "run-s package:components package:compositions",
 		"package:compositions": "uniform canvas composition pull ./data/uniform/uniformconf.yaml",
@@ -60,6 +60,7 @@
 		"@uniformdev/canvas-react": "19.27.0",
 		"@uniformdev/context": "19.27.0",
 		"@uniformdev/context-devtools": "19.27.0",
+		"@uniformdev/context-edge-vercel": "^19.27.0",
 		"@uniformdev/context-next": "19.27.0",
 		"@uniformdev/context-react": "19.27.0",
 		"@uniformdev/project-map": "19.27.0",
