--- a/data/uniform/components/page.yaml
+++ b/data/uniform/components/page.yaml
@@ -27,6 +27,7 @@ slots:
       - $personalization
       - registrationForm
       - talkBlock
+      - demoComponent
     allowAllComponents: false
     inheritAllowedComponents: false
     patternsInAllowedComponents: false
@@ -47,4 +48,4 @@ defaults:
 titleParameter: pageTitle
 canBeComposition: true
 created: '2023-05-23T13:04:41.787163+00:00'
-updated: '2023-05-23T13:22:33.503763+00:00'
+updated: '2023-05-30T10:52:21.240671+00:00'
