--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "se-uniform-conf",
-	"version": "19.27.0",
+	"version": "19.35.1",
 	"private": true,
 	"license": "Apache-2.0",
 	"scripts": {
@@ -55,51 +55,50 @@
 		"@analytics/google-analytics": "1.0.7",
 		"@kentico/kontent-delivery": "^11.13.0",
 		"@react-hook/window-scroll": "1.3.0",
-		"@sanity/client": "6.1.3",
+		"@sanity/client": "6.1.7",
 		"@sanity/image-url": "^1.0.2",
-		"@uniformdev/canvas": "19.27.0",
+		"@uniformdev/canvas": "19.35.1",
 		"@uniformdev/canvas-algolia": "^17.8.0",
-		"@uniformdev/canvas-contentful": "19.27.0",
-		"@uniformdev/canvas-contentstack": "19.27.0",
+		"@uniformdev/canvas-contentful": "19.35.1",
+		"@uniformdev/canvas-contentstack": "19.35.1",
 		"@uniformdev/canvas-graphcms": "^17.1.0",
-		"@uniformdev/canvas-kontent": "19.27.0",
-		"@uniformdev/canvas-next": "19.27.0",
-		"@uniformdev/canvas-react": "19.27.0",
-		"@uniformdev/canvas-sanity": "19.27.0",
+		"@uniformdev/canvas-kontent": "19.35.1",
+		"@uniformdev/canvas-next": "19.35.1",
+		"@uniformdev/canvas-react": "19.35.1",
+		"@uniformdev/canvas-sanity": "19.35.1",
 		"@uniformdev/canvas-strapi": "^17.1.0",
-		"@uniformdev/context": "19.27.0",
-		"@uniformdev/context-devtools": "19.27.0",
-		"@uniformdev/context-edge-vercel": "^19.27.0",
-		"@uniformdev/context-gtag": "19.27.0",
-		"@uniformdev/context-next": "19.27.0",
-		"@uniformdev/context-react": "19.27.0",
-		"@uniformdev/project-map": "19.27.0",
+		"@uniformdev/context": "19.35.1",
+		"@uniformdev/context-devtools": "19.35.1",
+		"@uniformdev/context-gtag": "19.35.1",
+		"@uniformdev/context-next": "19.35.1",
+		"@uniformdev/context-react": "19.35.1",
+		"@uniformdev/project-map": "19.35.1",
 		"analytics": "0.8.9",
-		"contentful": "^10.2.3",
+		"contentful": "^10.3.4",
 		"contentstack": "^3.17.1",
 		"cookie": "0.5.0",
 		"graphql-request": "^6.1.0",
-		"next": "13.4.7",
+		"next": "13.4.9",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"strapi-sdk-js": "^2.2.0",
-		"styled-components": "6.0.0-rc.5"
+		"styled-components": "6.0.4"
 	},
 	"devDependencies": {
 		"@contentful/rich-text-html-renderer": "^16.1.0",
 		"@types/cookie": "0.5.1",
-		"@types/node": "20.3.1",
-		"@types/react": "18.2.13",
-		"@types/react-dom": "18.2.6",
+		"@types/node": "20.4.2",
+		"@types/react": "18.2.15",
+		"@types/react-dom": "18.2.7",
 		"@types/styled-components": "5.1.26",
-		"@uniformdev/cli": "^19.27.0",
+		"@uniformdev/cli": "^19.35.1",
 		"autoprefixer": "^10.4.14",
 		"npm-run-all": "4.1.5",
-		"postcss": "^8.4.24",
-		"prettier": "^2.8.8",
+		"postcss": "^8.4.25",
+		"prettier": "^3.0.0",
 		"sass": "1.63.6",
-		"tailwindcss": "3.3.2",
-		"ts-loader": "9.4.3",
-		"typescript": "5.1.3"
+		"tailwindcss": "3.3.3",
+		"ts-loader": "9.4.4",
+		"typescript": "5.1.6"
 	}
 }
